fix navigation alignment

--- a/src/examples/ui/menu/full-screen/css/index-css.css
+++ b/src/examples/ui/menu/full-screen/css/index-css.css
@@ -114,7 +114,7 @@ button:focus {
 
 .navigation--primary {
 	align-self: center;
-	grid-column: 2;
+	grid-column: 1 / 3;
 	grid-row: 2;
 	justify-self: center;
 }
@@ -144,7 +144,7 @@ button:focus {
 }
 
 .navigation--secondary {
-	grid-column: 2;
+	grid-column: 1 / 3;
 	grid-row: 3;
 }
 
